SWATCH-5332: Added contracts-update-TC010: create contract after offering sync